--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -10,31 +10,32 @@
     android:fitsSystemWindows="true"
     android:background="#E20707"
     android:gravity="center"
-    tools:context=".SignIn">
+    tools:context=".Login">
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="@dimen/_30sdp"
-        android:gravity="center"
         android:text="Hello"
-        android:fontFamily="@font/arbutus_slab"
-        android:textColor="@color/white"
         android:textSize="@dimen/_20ssp"
-        android:textStyle="bold" />
-
+        android:textColor="@color/white"
+        android:gravity="center"
+        android:textStyle="bold"
+        android:fontFamily="@font/arbutus_slab"
+        android:layout_marginTop="@dimen/_30sdp"
+        android:layout_centerHorizontal="true"
+        />
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="@dimen/_70sdp"
+        android:text="Login into your account"
+        android:textSize="@dimen/_15ssp"
+        android:textColor="@color/white"
         android:gravity="center"
         android:fontFamily="@font/averia_serif_libre_light"
-        android:text="Create your account"
-        android:textColor="@color/white"
-        android:textSize="@dimen/_15ssp"
-        android:textStyle="bold" />
+        android:textStyle="bold"
+        android:layout_marginTop="@dimen/_70sdp"
+        android:layout_centerHorizontal="true"
+        />
 
     <ImageView
         android:layout_width="@dimen/_50sdp"
@@ -57,30 +58,16 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Sign Up"
             android:layout_gravity="center"
-            android:textColor="#E20707"
-            android:fontFamily="@font/anton"
             android:layout_marginTop="@dimen/_30sdp"
+            android:text="Login"
+            android:fontFamily="@font/anton"
+            android:textColor="#E20707"
             android:textSize="@dimen/_35ssp"
 
             />
 
-        <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/name"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="Enter name"
-            android:layout_margin="@dimen/_20sdp"
-            app:boxStrokeColor="#E20707"
-            app:hintTextColor="#E20707"
-            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
 
-            <com.google.android.material.textfield.TextInputEditText
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                />
-        </com.google.android.material.textfield.TextInputLayout>
 
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/email"
@@ -91,6 +78,7 @@
             app:hintTextColor="#E20707"
             android:layout_marginLeft="@dimen/_20sdp"
             android:layout_marginRight="@dimen/_20sdp"
+            android:layout_marginTop="@dimen/_20sdp"
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
 
             <com.google.android.material.textfield.TextInputEditText
@@ -118,20 +106,22 @@
         </com.google.android.material.textfield.TextInputLayout>
 
         <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/login"
             android:layout_width="@dimen/_130sdp"
             android:layout_height="@dimen/_35sdp"
             android:layout_gravity="end"
-            android:text="Sign Up"
+            android:text="Login"
             android:textAllCaps="false"
             android:textColor="@color/white"
             android:layout_marginRight="@dimen/_20sdp"
             android:layout_marginTop="@dimen/_20sdp"
             android:background="@drawable/red_button"/>
 
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Already have account ?"
+            android:text="Don't have account ?"
             android:layout_gravity="center"
             android:clickable="true"
             android:layout_marginTop="@dimen/_20sdp"
