--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -7,7 +7,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="@drawable/images"
+    android:background="#E20707"
     android:fitsSystemWindows="true"
     tools:context=".SplashScreen">
 
@@ -15,14 +15,14 @@
         android:id="@+id/title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Home Gym App"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:textSize="@dimen/_20ssp"
-        android:textColor="@color/white"
         android:layout_marginTop="@dimen/_20sdp"
-        android:textStyle="bold"
-        />
+        android:text="Home Gym App"
+        android:fontFamily="@font/amiko"
+        android:textColor="@color/white"
+        android:textSize="@dimen/_20ssp"
+        android:textStyle="bold" />
 
     <ImageView
         android:id="@+id/icon"
@@ -40,6 +40,7 @@
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:textSize="@dimen/_15ssp"
+        android:fontFamily="@font/amiko"
         android:textColor="@color/white"
         android:layout_marginBottom="@dimen/_20sdp"
         android:textStyle="bold"
