--- a/app/src/main/res/layout/activity_home_page.xml
+++ b/app/src/main/res/layout/activity_home_page.xml
@@ -10,19 +10,28 @@
     android:fitsSystemWindows="true"
     android:background="#E20707"
     tools:context=".HomePage">
-
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_alignParentTop="true"
         android:layout_above="@+id/linear"
-        android:layout_margin="@dimen/_10sdp"
         >
+
+        <ImageButton
+            android:id="@+id/backButton"
+            android:layout_width="@dimen/_25sdp"
+            android:layout_height="@dimen/_25sdp"
+            android:layout_alignParentTop="true"
+            android:layout_marginLeft="@dimen/_15sdp"
+            android:background="@drawable/backbutton"
+            android:layout_marginTop="@dimen/_10sdp"
+            />
         <LinearLayout
             android:layout_width="wrap_content"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:orientation="vertical"
             android:layout_marginLeft="@dimen/_20sdp"
+            android:layout_marginTop="@dimen/_20sdp"
             >
             <TextView
                 android:id="@+id/userName"
