--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -118,6 +118,7 @@
         </com.google.android.material.textfield.TextInputLayout>
 
         <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/signInButton"
             android:layout_width="@dimen/_130sdp"
             android:layout_height="@dimen/_35sdp"
             android:layout_gravity="end"
