--- a/app/src/main/res/layout/exercise.xml
+++ b/app/src/main/res/layout/exercise.xml
@@ -1,10 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     app:cardCornerRadius="@dimen/_15ssp"
+    android:clickable="true"
+    android:id="@+id/exerciselayout"
     android:layout_margin="@dimen/_10ssp"
     android:background="#E20707"
     >
@@ -30,7 +33,7 @@
             android:gravity="center"
             >
             <TextView
-                android:id="@+id/exercuse"
+                android:id="@+id/exercisename"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Exercise"
