--- a/app/src/main/res/layout/activity_day_list.xml
+++ b/app/src/main/res/layout/activity_day_list.xml
@@ -23,9 +23,9 @@
         />
 
     <TextView
+        android:id="@+id/muscleName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Arm Exercises"
         android:textSize="@dimen/_20ssp"
         android:textColor="@color/white"
         android:gravity="center"
