--- a/app/src/main/res/layout/activity_exercices.xml
+++ b/app/src/main/res/layout/activity_exercices.xml
@@ -23,9 +23,9 @@
         />
 
     <TextView
+        android:id="@+id/muscleName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Arm Exercises"
         android:textSize="@dimen/_20ssp"
         android:textColor="@color/white"
         android:gravity="center"
@@ -57,11 +57,11 @@
         >
 
         <TextView
+            android:id="@+id/dayNumber"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_marginTop="@dimen/_30sdp"
-            android:text="Day 10 Exercises"
             android:fontFamily="@font/anton"
             android:textColor="#E20707"
             android:textSize="@dimen/_25ssp"
