--- a/app/src/main/res/layout/activity_exercice_details.xml
+++ b/app/src/main/res/layout/activity_exercice_details.xml
@@ -8,13 +8,15 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:fitsSystemWindows="true"
+    android:gravity="center"
     tools:context=".ExerciceDetails">
 
     <VideoView
         android:id="@+id/exeVideo"
         android:layout_width="match_parent"
-        android:layout_marginLeft="@dimen/_40sdp"
+        android:layout_gravity="center"
         android:layout_marginRight="@dimen/_40sdp"
+        android:layout_marginLeft="@dimen/_40sdp"
         android:layout_marginTop="@dimen/_50sdp"
         android:layout_height="@dimen/_150sdp"/>
 
