--- a/app/src/main/res/layout/activity_day_list.xml
+++ b/app/src/main/res/layout/activity_day_list.xml
@@ -72,8 +72,7 @@
             android:id="@+id/daylistrecycle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            tools:listitem="@layout/daylist"
-            />
+            tools:listitem="@layout/daylist" />
 
 
     </LinearLayout>
